--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <link rel="stylesheet" href="assets/css/nav.css">
   <link rel="stylesheet" href="assets/css/section.css">
   <link rel="stylesheet" href="assets/css/demo.css">
-  <link rel="stylesheet" href="assets/css/source-view.css">
   <link rel="stylesheet" href="./node_modules/prismjs/themes/prism.css">
-
+  <link rel="stylesheet" href="./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css" data-noprefix />
+  <link rel="stylesheet" href="assets/css/source-view.css">
+  
   <link rel="import" href="views/template/source-link.html" data-type="template" data-templateid="source-link">
 
   <link rel="import" href="views/section/source-view.html" data-type="section">
