- 선택된 폴더의 내용을 갱신할 수 있도록 컨텍스트 메뉴와 refresh 기능 추가 - 폴더를 변경할 때 소스 코드 출력을 감추는 기능 추가

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     // 메인 메뉴의 이벤트 처리
     require('./renderer-process/application-menu')
     
+    // 컨텍스트 메뉴의 이벤트 처리
+    require('./renderer-process/context-menu')
   </script>
 </body>
 </html>
